examples/test/testpolicy5608.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5608
  namespace: namespace58
spec:
  podSelector:
    matchLabels:
      key6: value14
      key14: value38
      key26: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value2
      podSelector:
        matchLabels:
          key29: value41
          key11: value10
